--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
-.img {
-    width: 50%;
+.banner {
+    width: 100%;
     display: block; /* Assurez-vous que l'image est un élément de bloc pour appliquer les marges automatiques */
     margin: 0 auto; /* Centre l'image horizontalement */
     border-radius: 2%;
